Add opens for java.io when running test on Java 9+, add test for it
The JVM throws illegal access errors when we run the testing JVM with
the --illegal-access=deny flag. This happens because the agents delegate
the calls to java.io via our proxy to record the file dependencies.

The opening of the java.io package is done by redefining the module